apply button not showing fixed for job detail page for IE 11 and below.

--- a/JXTNext.Sitefinity.Widgets.Common/ResourcePackages/Hudson/assets/src/project/components/_basic-components.scss
+++ b/JXTNext.Sitefinity.Widgets.Common/ResourcePackages/Hudson/assets/src/project/components/_basic-components.scss
@@ -1989,9 +1989,13 @@ ul.vertical-ul {
     padding: 0 10px;
     border: 1px solid $global-highlight-color;
     margin-right: 3px;
+    cursor: pointer;
     &:hover, &.active{
         background: $global-highlight-color;
         color: $brightColor;
+    }
+    &.active{
+        cursor: default;
     }
 }
 select.slimtable-paging-select {
